# spectrum

./: README.md  meson.build  pyproject.toml  setup.py
fortran_source/: numeric_tools.f90
spectrum/: compute_spectra.py  meson.build
