[build-system]
requires = ["meson", "meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "spectrum"
version = "0.1.0"
description='A Python package for computing power spectra from CDO spherical harmonic coefficients.'
authors = [
  {name = "Yanmichel A. Morfa", email = "morfa@iap-kborn.de"},
]
maintainers = [
  {name = "Tom Doerffel", email = "doerffel@iap-kborn.de"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    'numpy>=1.20.0',
    'xarray',
    'pint>=0.20.1',
]

[project.scripts]
spectrum='spectrum.compute_spectra:main'
